# STX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile.in  LICENSE  NOTES.md  Panicking.html  README.md  SETUP.md  TODO.md  a.out  abort_8h.html  abort_8h__incl.map  abort_8h__incl.md5  abort_8h_source.html  annotated.html  backtrace_8h.html  backtrace_8h__incl.map  backtrace_8h__incl.md5  backtrace_8h_source.html  build.sh  classes.html  classstx_1_1FixedReport-members.html  classstx_1_1FixedReport.html  classstx_1_1NoneType.html  classstx_1_1Option-members.html  classstx_1_1Option.html  classstx_1_1Option__coll__graph.map  classstx_1_1Option__coll__graph.md5  classstx_1_1Option__inherit__graph.map  classstx_1_1Option__inherit__graph.md5  classstx_1_1Report-members.html  classstx_1_1Report.html  classstx_1_1ReportPayload-members.html  classstx_1_1ReportPayload.html  classstx_1_1Result-members.html  classstx_1_1Result.html  classstx_1_1Result__coll__graph.map  (+238 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml  cpp-17-clang-14-macos-12.yml  cpp-17-clang-14-ubuntu-22.04.yml  cpp-17-clang-15-ubuntu-22.04-qemu-arm.yml  cpp-17-gcc-12-ubuntu-22.04-qemu-arm.yml  cpp-17-gcc-12-ubuntu-22.04-qemu.yml  cpp-17-gcc-12-ubuntu-22.04.yml  cpp-17-msvc-2019-windows.yml  cpp17-clang-macos-10.15.yml  cpp17-clang14-macos-12.yml  cpp17-clang14-ubuntu-22.04.yml  cpp17-clang9-ubuntu-18.04.yml  cpp17-gcc12-ubuntu-22.04.yml  cpp17-gcc9-ubuntu.yml  cpp17-msvc-windows.yml  cpp17-msvc2019-windows.yml  cpp17:clang10:macos-10.15.yml  cpp17:clang9:ubuntu-18.04.yml  cpp17:clang:macos-10.15.yml  cpp20-clang10-ubuntu-20.04.yml  cpp20.clang10.ubuntu-20.04.yml  cpp20.ubuntu-20.04.yml  macos-10.15.yml  (+4 more)
allocator/: CMakeLists.txt
assets/: DoxygenLayout.xml  footer.html  handling_result.dox  header.html  main_page.dox  main_page.md  panicking.dox  panicking.md  styles.css  stylesx.css
async/: CMakeLists.txt  DESIGN.md  README.md
backtrace/: CMakeLists.txt
benchmarks/: CMakeLists.txt  compare.cc  one_op.cc  two_op.cc
cmake-modules/: FindAtomic.cmake  HandleFlags.cmake  add_project_library.cmake
config/: CMakeLists.txt
deferred_init/: CMakeLists.txt
docs/: CMakeLists.txt  abort_8h__incl.map  abort_8h__incl.md5  backtrace_8h__dep__incl.map  backtrace_8h__dep__incl.md5  backtrace_8h__incl.md5  classes.html  classstx_1_1NoneType-members.html  classstx_1_1Option.html  classstx_1_1ReportPayload-members.html  classstx_1_1ReportPayload.html  classstx_1_1Result.html  classstx_1_1Result__coll__graph.md5  common_8h_source.html  config_8h.html  config_8h_source.html  default_8h__incl.map  default_8h_source.html  dir_15843fe3b00b54d09611a61b4e051238.html  dir_21d49818a4f1b18f45b9a306b43ed19a.html  dir_21d49818a4f1b18f45b9a306b43ed19a_dep.map  dir_21d49818a4f1b18f45b9a306b43ed19a_dep.md5  dir_230a3cfc6b45bcc1428bbaa88f78fb3e_dep.md5  dir_699cd9e3881a6ed001131f02aa24732c.html  dir_699cd9e3881a6ed001131f02aa24732c_dep.map  dir_b007ec6cf0a483e8a155a2d068b0aaae.html  dir_b007ec6cf0a483e8a155a2d068b0aaae_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_ffb2e3fb99690e3dd781b405896cabac.html  functions.html  functions_0x7e.html  functions_c.html  functions_func.html  functions_m.html  functions_r.html  functions_u.html  functions_vars.html  globals_defs.html  halt_8h__incl.map  (+34 more)
docs/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  classes_1.js  classes_2.js  classes_5.js  defines_1.js  enumvalues_1.js  files_1.js  files_3.js  files_5.js  functions_0.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  related_1.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_5.js  typedefs_7.js  typedefs_9.js  variables_2.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  (+1 more)
enum/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  divide.cc  option.cc  panic.cc  panic_hook.cc  parse_version.cc  result.cc
examples/option/: CMakeLists.txt  main.cc
examples/panic/: CMakeLists.txt
examples/panic_backtrace/: CMakeLists.txt
examples/panic_handler/: CMakeLists.txt  main.cc
examples/panic_hook/: main.cc
examples/result/: CMakeLists.txt  main.cc
examples/safe_divide/: safe_divide.cc
examples/signal_backtrace/: CMakeLists.txt  main.cc
extensions/: README.md
fn/: CMakeLists.txt  README.md
include/: CMakeLists.txt
limits/: CMakeLists.txt
mem/: CMakeLists.txt  README.md
option_result/: CMakeLists.txt
panic/: CMakeLists.txt
panic/include/stx/: panic.h
panic/include/stx/panic/: default.h  hook.h  print.h  report.h
panic/src/: hook.cc  panic.cc
panic/tests/: panic_test.cc
resource/: CMakeLists.txt  README.md
scheduler/: CMakeLists.txt  DESIGN.md  README.md
scripts/: plot.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_2.js  files_4.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_10.js  (+42 more)
source_location/: CMakeLists.txt  README.md
span/: CMakeLists.txt  README.md
spinlock/: CMakeLists.txt
src/: await.cc  backtrace.cc  delay.cc  enum.cc  hook.cc  limits.cc  manager.cc  panic.cc  rc.cc  span.cc  thread_pool.cc  timeline.cc  utils.cc  vec.cc
string/: CMakeLists.txt  README.md
struct/: CMakeLists.txt
task/: CMakeLists.txt
tests/: backtrace_test.cc  common_test.cc  constexpr_test.cc  option_test.cc  panic_info.cc  panic_test.cc  report_test.cc  result_test.cc  scheduler.cc  span_test.cc  stream.cc  string.cc  tests.cc  timeline.cc  vec.cc
utils/: CMakeLists.txt
vec/: CMakeLists.txt  README.md
void/: CMakeLists.txt
(+165 files in other folders)
